src/snapshots/molt__tests__function.snap
---
source: src/lib.rs
expression: match_pattern(stringify! (function))
---
note: Match
  ┌─ "test_data/function.rs":3:1
  │  
3 │ ╭ fn foo(asd: usize) {
4 │ │     println!("hello world");
5 │ │ }
  │ ╰─^ $f
  │  
  = $ident = foo
