src/snapshots/molt__tests__function2.snap
---
source: src/lib.rs
expression: match_pattern(stringify! (function2))
---
note: Match
  ┌─ "test_data/function2.rs":3:1
  │  
3 │ ╭ fn foo(bar1: usize, bar2: usize, bar3: usize) {
4 │ │     println!("hello world");
5 │ │ }
  │ ╰─^ $f
  │  
  = $arg = bar3
  = $ident = foo

note: Match
  ┌─ "test_data/function2.rs":3:1
  │  
3 │ ╭ fn foo(bar1: usize, bar2: usize, bar3: usize) {
4 │ │     println!("hello world");
5 │ │ }
  │ ╰─^ $f
  │  
  = $arg = bar2
  = $ident = foo

note: Match
  ┌─ "test_data/function2.rs":3:1
  │  
3 │ ╭ fn foo(bar1: usize, bar2: usize, bar3: usize) {
4 │ │     println!("hello world");
5 │ │ }
  │ ╰─^ $f
  │  
  = $arg = bar1
  = $ident = foo
