src/snapshots/molt__tests__ident.snap
---
source: src/lib.rs
expression: match_pattern(stringify! (ident))
---
note: Match
  ┌─ "test_data/ident.rs":1:1
  │
1 │ const foo: usize = 10;
  │ ^^^^^^^^^^^^^^^^^^^^^^ $pat
  │
  = $ident = foo

note: Match
  ┌─ "test_data/ident.rs":2:1
  │
2 │ const bar: usize = 10;
  │ ^^^^^^^^^^^^^^^^^^^^^^ $pat
  │
  = $ident = bar
