src/snapshots/molt__tests__let_.snap
---
source: src/lib.rs
expression: "match_pattern(stringify! (let_), stringify! (let_))"
---
note: Match
  ┌─ "test_data/let_/main.rs":2:13
  │
2 │     let x = 10;
  │             ^^ $pat

note: Match
  ┌─ "test_data/let_/main.rs":3:20
  │
3 │     let y: usize = 10;
  │                    ^^ $pat
