src/snapshots/molt__tests__multiple_vars.snap
---
source: src/lib.rs
expression: match_pattern(stringify! (multiple_vars))
---
note: Match
  ┌─ "test_data/multiple_vars.rs":1:1
  │
1 │ const x: usize = 5 + 3;
  │ ^^^^^^^^^^^^^^^^^^^^^^^ $pat
  │
  = $e = 3
  = $expr = (5 + 3)
  = $ident = x
