src/snapshots/molt__tests__non_inferable_command.snap
---
source: src/lib.rs
expression: "emit_diagnostic_str(& input, make_error_diagnostic(& err))"
---
error: There were multiple candidates for the inferred match variable.
